@@ -23,9 +23,6 @@
 #ifndef _ASTERISK_CRYPTO_H
 #define _ASTERISK_CRYPTO_H
 
-#include "asterisk/channel.h"
-#include "asterisk/file.h"
-
 #if defined(__cplusplus) || defined(c_plusplus)
 extern "C" {
 #endif
